Bug 1105608 - Throw SyntaxError for export-from. r=jorendorff